# gitlab-discord-webhook

./: CHANGELOG.md  Dockerfile  README.md  compose.yaml  config-example.ini  config.sample.yaml  main.py  models.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: build.yaml  deploy.yaml  docker.yaml
examples/: issue_update_new_assignee.json  merge_request_close.json  merge_request_update_title.json  note_issue_comment.json  push_new_branch.json
gitlab_discord_webhook/: __init__.py  __main__.py  models.py
tests/: test_webhooks.py
tests/resources/: issue_close.json  issue_new.json  issue_reopen.json  issue_update_new_label.json  merge_request_merge.json  merge_request_new.json  merge_request_reopen.json  note_commit_comment.json  note_merge_request_comment.json  push_new_branch_with_commits.json  wiki_create.json
